--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,21 +8,23 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Set up QEMU
+      -
+        name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
+      -
+        name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Login to DockerHub
+      -
+        name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           registry: registry.kthcloud.com
-          username: robot$system+ci
-          password: yMmajuBhIaX1Y608Hh8NUZuU8psJXKqz
-      - name: Build and push
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      -
+        name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: "{{defaultContext}}:landing/frontend"
           push: true
-          tags: registry.kthcloud.com/system/landing-frontend:latest
+          tags: registry.kthcloud.com/examples/frontend-example:latest
