Add keycloak and form for news

--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
     "@iconify/react": "^3.2.2",
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
+    "@react-keycloak/web": "^3.4.0",
     "@testing-library/jest-dom": "^5.16.4",
     "apexcharts": "^3.35.3",
     "change-case": "^4.1.2",
     "date-fns": "^2.28.0",
     "history": "^5.3.0",
+    "keycloak-js": "^19.0.3",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
