--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
   listen              3000;
-  server_name         status.kthcloud.com;
+  server_name         status.cloud.cbh.kth.se;
 
   location / {
     root   /usr/share/nginx/html;
