--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL="https://api.kthcloud.com"
-REACT_APP_DEPLOY_API_URL="https://api.kthcloud.com/deploy/v1"
+REACT_APP_API_URL="https://api.cloud.cbh.kth.se"
+REACT_APP_DEPLOY_API_URL="https://api.cloud.cbh.kth.se/deploy/v1"
