change secret in manifest after new fixed name

--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -22,4 +22,4 @@ spec:
           image: registry.cloud.cbh.kth.se/system/landing-frontend
           imagePullPolicy: Always
       imagePullSecrets:
-        - name: system-ci-secret
+        - name: kthcloud-system-secret
