--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@faker-js/faker": "^7.3.0",
     "@hookform/resolvers": "^2.9.3",
     "@iconify/react": "^3.2.2",
+    "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
     "@react-keycloak/web": "^3.4.0",
