--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "history": "^5.3.0",
     "keycloak-js": "^19.0.3",
     "lodash": "^4.17.21",
+    "notistack": "^3.0.1",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
