--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@babel/core": "^7.18.6",
     "@babel/eslint-parser": "^7.18.2",
     "@faker-js/faker": "^8.0.2",
