--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,9 +13,9 @@ jobs:
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
       - name: Test with environment variables
-        run: echo $RELEASE_NAME
+        run: echo $REACT_APP_RELEASE_NAME
         env:
-          RELEASE_NAME: kthcloud-landing-frontend-release-${{ steps.date.outputs.date }}-$(git rev-parse --short "$GITHUB_SHA")
+          REACT_APP_RELEASE_NAME: kthcloud-landing-frontend-release-${{ steps.date.outputs.date }}-$(git rev-parse --short "$GITHUB_SHA")
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
