--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,11 +11,16 @@ jobs:
     steps:
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+        run: echo "{date}={$(date +'%Y-%m-%d')}" >> $GITHUB_OUTPUT
+
+      - name: Get current branch hash
+        id: branch
+        run: echo "{branch}={$(git rev-parse --short "$GITHUB_REF")}" >> $GITHUB_OUTPUT 
+
       - name: Test with environment variables
         run: echo $REACT_APP_RELEASE_NAME
         env:
-          REACT_APP_RELEASE_NAME: kthcloud-landing-frontend-release-${{ steps.date.outputs.date }}-${{ git rev-parse --short "$GITHUB_SHA")}}
+          REACT_APP_RELEASE_NAME: release-${{ steps.date.outputs.date }}-${{ steps.branch.outputs.branch }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -23,6 +28,7 @@ jobs:
           registry: registry.cloud.cbh.kth.se
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
