--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,21 +9,10 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Get current date
-        id: date
-        run: echo "{date}={$(date +'%Y-%m-%d')}" >> $GITHUB_OUTPUT
-      
-      - name: Show where we at
-        run: ls
-
-      - name: Get current branch hash
-        id: branch
-        run: echo "{branch}={${{ github.sha }}}" >> $GITHUB_OUTPUT 
-
       - name: Test with environment variables
         run: echo $REACT_APP_RELEASE_NAME
         env:
-          REACT_APP_RELEASE_NAME: release-${{ steps.date.outputs.date }}-${{ steps.branch.outputs.branch }}
+          REACT_APP_RELEASE_NAME: release-$(date +'%Y-%m-%d')-${{ github.sha }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
