--- a/.env
+++ b/.env
@@ -2,4 +2,7 @@ REACT_APP_API_URL="https://api.cloud.cbh.kth.se"
 REACT_APP_DEPLOY_API_URL="https://api.cloud.cbh.kth.se/deploy/v1"
 REACT_APP_DEPLOY_SOCKET_URL="wss://api.cloud.cbh.kth.se/deploy/v1"
 GENERATE_SOURCEMAP=false 
-REACT_APP_RELEASE_NAME="dev-preview"
+
+REACT_APP_RELEASE_BRANCH="dev"
+REACT_APP_RELEASE_DATE="1970-01-01_00:00"
+REACT_APP_RELEASE_COMMIT="0000000000000000000000000000000000000000"
