--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get current date
-        id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+        run: REACT_APP_RELEASE_DATE=$( date '+%F_%H:%M' )
 
       - name: Test with environment variables
-        run: echo $REACT_APP_RELEASE_NAME
+        run: echo $REACT_APP_RELEASE_BRANCH $REACT_APP_RELEASE_DATE $REACT_APP_RELEASE_COMMIT
         env:
-          REACT_APP_RELEASE_NAME: release-${{ steps.date.outputs.date }}-${{ github.sha }}
+          REACT_APP_RELEASE_BRANCH: release
+          REACT_APP_RELEASE_COMMIT: ${{ github.sha }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
