--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get current date
-        run: REACT_APP_RELEASE_DATE=$( date '+%F_%H:%M' )
+        run: echo "REACT_APP_RELEASE_DATE=$( date '+%F_%H:%M' )" >> $GITHUB_ENV
 
       - name: Test with environment variables
         run: echo $REACT_APP_RELEASE_BRANCH $REACT_APP_RELEASE_DATE $REACT_APP_RELEASE_COMMIT
