--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,14 +9,8 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Get current date
+      - name: Set release env
         run: echo "REACT_APP_RELEASE_DATE=$( date '+%F_%H:%M' )" >> $GITHUB_ENV
-
-      - name: Test with environment variables
-        run: echo $REACT_APP_RELEASE_BRANCH $REACT_APP_RELEASE_DATE $REACT_APP_RELEASE_COMMIT
-        env:
-          REACT_APP_RELEASE_BRANCH: release
-          REACT_APP_RELEASE_COMMIT: ${{ github.sha }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -24,6 +18,9 @@ jobs:
           registry: registry.cloud.cbh.kth.se
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+        env:
+          REACT_APP_RELEASE_BRANCH: release
+          REACT_APP_RELEASE_COMMIT: ${{ github.sha }}
 
       - name: Build and push
         uses: docker/build-push-action@v3
