--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "change-case": "^4.1.2",
     "date-fns": "^2.28.0",
     "history": "^5.3.0",
+    "http-status-codes": "^2.2.0",
     "keycloak-js": "^19.0.3",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
@@ -71,9 +72,9 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@babel/core": "^7.18.6",
     "@babel/eslint-parser": "^7.18.2",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@faker-js/faker": "^8.0.2",
     "@svgr/webpack": "^6.2.1",
     "eslint": "^8.19.0",
