--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "simplebar": "^5.3.8",
     "simplebar-react": "^2.4.1",
     "web-vitals": "^2.1.4",
+    "yaml": "^2.3.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
