--- a/.github/workflows/kthcloud-ci-beta.yml
+++ b/.github/workflows/kthcloud-ci-beta.yml
@@ -1,20 +1,29 @@
 name: kthcloud-ci-beta
-"on":
+on:
   push:
     branches:
-    - beta
+      - "main"
+
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        registry: registry.cloud.cbh.kth.se
-        username: ${{ secrets.BETA_DOCKER_USERNAME }}
-        password: ${{ secrets.BETA_DOCKER_PASSWORD }}
-    - name: Build and push
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        tags: registry.cloud.cbh.kth.se/deploy-3de025ba-ed43-43e0-ab50-03c04b7ef968/landing-beta
+      - name: Set release env
+        run: echo "RELEASE_DATE=$( date '+%F_%H:%M' )" >> $GITHUB_ENV
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          registry: registry.cloud.cbh.kth.se
+          username: ${{ secrets.BETA_DOCKER_USERNAME }}
+          password: ${{ secrets.BETA_DOCKER_PASSWORD }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: registry.cloud.cbh.kth.se/deploy-3de025ba-ed43-43e0-ab50-03c04b7ef968/landing-beta
+          build-args: |
+            "RELEASE_BRANCH=release"
+            "RELEASE_DATE=${{ env.RELEASE_DATE }}"
+            "RELEASE_COMMIT=${{ github.sha }}"
