test add mode ports

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,6 @@
 server {
   listen              3000;
+  listen              8080;
   server_name         status.cloud.cbh.kth.se;
 
   location / {
