--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "date-fns": "^2.28.0",
     "history": "^5.3.0",
     "http-status-codes": "^2.2.0",
+    "js-base64": "^3.7.5",
     "keycloak-js": "^19.0.3",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
