--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,22 +1,32 @@
 server {
-  listen              3000;
-  listen              8080;
-  server_name         status.cloud.cbh.kth.se;
+  listen 3000;
+  listen 8080;
+  server_name cloud.cbh.kth.se;
 
+  # Define the root directory of your React app build
+  root /usr/share/nginx/html;
+  index index.html index.htm;
+
+  # Enable Gzip compression for faster content delivery
+  gzip on;
+  gzip_types text/plain text/css application/javascript application/json;
+  gzip_min_length 1000;
+
+  # Cache static assets for better performance
+  location ~* \.(?:ico|css|js|gif|jpe?g|png|svg|woff2?)$ {
+    expires 1y;
+    add_header Cache-Control "public, max-age=31536000, immutable";
+    access_log off;
+  }
+
+  # Handle all other requests by redirecting to index.html
   location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-
-    # to redirect all the requests to index.html,
-    # useful when you are using react-router
-
     try_files $uri /index.html;
   }
 
-  error_page   500 502 503 504  /50x.html;
-
+  # Error handling
+  error_page 500 502 503 504 /50x.html;
   location = /50x.html {
-    root   /usr/share/nginx/html;
+    root /usr/share/nginx/html;
   }
-
 }
