--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,7 @@ server {
   gzip_min_length 1000;
 
   # Cache static assets for better performance
-  location ~* \.(?:ico|css|js|gif|jpe?g|png|svg|woff2?)$ {
+  location ~* \.(?:ico|css|js|gif|jpe?g|png|svg|gltf|woff2?)$ {
     expires 1y;
     add_header Cache-Control "public, max-age=31536000, immutable";
     access_log off;
