Allow manual run of workflows

--- a/.github/workflows/kthcloud-ci.yml
+++ b/.github/workflows/kthcloud-ci.yml
@@ -1,10 +1,9 @@
 name: kthcloud-ci
-
 on:
   push:
     branches:
       - "main"
-
+  workflow_dispatch:
 jobs:
   docker:
     runs-on: ubuntu-latest
