--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "history": "^5.3.0",
     "http-status-codes": "^2.2.0",
     "i18next": "^23.6.0",
+    "i18next-browser-languagedetector": "^7.1.0",
     "js-base64": "^3.7.5",
     "keycloak-js": "^19.0.3",
     "lodash": "^4.17.21",
