--- a/package.json
+++ b/package.json
@@ -39,70 +39,70 @@
     ]
   },
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@hookform/resolvers": "^2.9.3",
-    "@iconify/react": "^3.2.2",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/lab": "^5.0.0-alpha.88",
-    "@mui/material": "^5.8.6",
-    "@mui/x-tree-view": "^6.0.0-alpha.3",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
+    "@iconify/react": "^4.1.1",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/lab": "^5.0.0-alpha.155",
+    "@mui/material": "^5.14.20",
+    "@mui/x-tree-view": "^6.17.0",
     "@react-keycloak/web": "^3.4.0",
-    "@react-three/drei": "^9.80.6",
-    "@react-three/fiber": "^8.13.7",
+    "@react-three/drei": "^9.90.0",
+    "@react-three/fiber": "^8.15.12",
     "@sanity/eventsource": "^5.0.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@types/three": "^0.155.0",
-    "apexcharts": "^3.35.3",
-    "change-case": "^4.1.2",
-    "crypto-js": "^4.1.1",
-    "date-fns": "^2.28.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@types/three": "^0.159.0",
+    "apexcharts": "^3.44.2",
+    "change-case": "^5.3.0",
+    "crypto-js": "^4.2.0",
+    "date-fns": "^2.30.0",
     "history": "^5.3.0",
-    "http-status-codes": "^2.2.0",
-    "i18next": "^23.6.0",
-    "i18next-browser-languagedetector": "^7.1.0",
+    "http-status-codes": "^2.3.0",
+    "i18next": "^23.7.8",
+    "i18next-browser-languagedetector": "^7.2.0",
     "js-base64": "^3.7.5",
-    "keycloak-js": "^19.0.3",
+    "keycloak-js": "^23.0.1",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
-    "punycode": "^2.3.0",
+    "punycode": "^2.3.1",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.0",
+    "react-apexcharts": "^1.4.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0",
-    "react-hook-form": "^7.33.1",
-    "react-i18next": "^13.3.1",
-    "react-router-dom": "^6.3.0",
+    "react-helmet-async": "^2.0.3",
+    "react-hook-form": "^7.48.2",
+    "react-i18next": "^13.5.0",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
-    "simplebar": "^5.3.8",
-    "simplebar-react": "^2.4.1",
-    "three": "^0.155.0",
-    "web-vitals": "^2.1.4",
-    "yaml": "^2.3.1",
-    "yup": "^0.32.11"
+    "simplebar": "^6.2.5",
+    "simplebar-react": "^3.2.4",
+    "three": "^0.159.0",
+    "web-vitals": "^3.5.0",
+    "yaml": "^2.3.4",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/eslint-parser": "^7.18.2",
+    "@babel/core": "^7.23.5",
+    "@babel/eslint-parser": "^7.23.3",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
-    "@faker-js/faker": "^8.0.2",
-    "@svgr/webpack": "^6.2.1",
-    "eslint": "^8.19.0",
+    "@faker-js/faker": "^8.3.1",
+    "@svgr/webpack": "^8.1.0",
+    "eslint": "^8.55.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.7.1"
+    "prettier": "^3.1.0"
   },
   "overrides": {
-    "@svgr/webpack": "^6.2.1"
+    "@svgr/webpack": "^8.1.0"
   }
 }
