--- a/.github/workflows/check-format.yml
+++ b/.github/workflows/check-format.yml
@@ -18,6 +18,9 @@ jobs:
     - name: Install Prettier
       run: npm install --save-dev prettier
 
+    - name: Install dependencies
+      run: npm install
+
     - name: Run Prettier
       run: npx prettier --write .
 
