--- a/.prettierrc
+++ b/.prettierrc
@@ -1,32 +1,93 @@
 {
-    "arrowParens": "always",
-    "bracketSpacing": true,
-    "endOfLine": "lf",
-    "htmlWhitespaceSensitivity": "css",
-    "insertPragma": false,
-    "singleAttributePerLine": false,
-    "bracketSameLine": false,
-    "jsxBracketSameLine": false,
-    "jsxSingleQuote": false,
-    "printWidth": 80,
-    "proseWrap": "preserve",
-    "quoteProps": "as-needed",
-    "requirePragma": false,
-    "semi": true,
-    "singleQuote": false,
-    "tabWidth": 2,
-    "trailingComma": "es5",
-    "useTabs": false,
-    "vueIndentScriptAndStyle": false,
-    "parser": "babel",
-    "overrides": [
-      {
-        "files": ["*.json", "*.jsonc", "*.json5"],
-        "options": {
-          "parser": "json5"
-        }
+  "arrowParens": "always",
+  "bracketSpacing": true,
+  "endOfLine": "lf",
+  "htmlWhitespaceSensitivity": "css",
+  "insertPragma": false,
+  "singleAttributePerLine": false,
+  "bracketSameLine": false,
+  "jsxSingleQuote": false,
+  "printWidth": 80,
+  "proseWrap": "preserve",
+  "quoteProps": "as-needed",
+  "requirePragma": false,
+  "semi": true,
+  "singleQuote": false,
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "useTabs": false,
+  "vueIndentScriptAndStyle": false,
+  "parser": "babel",
+  "overrides": [
+    {
+      "files": [
+        "*.json",
+        "*.jsonc",
+        "*.json5"
+      ],
+      "options": {
+        "parser": "json",
+        "printWidth": 120,
+        "tabWidth": 4
       }
-    ]
-  
-  }
-  
+    },
+    {
+      "files": [
+        "*.env"
+      ],
+      "options": {
+        "parser": "babel",
+        "printWidth": 120,
+        "tabWidth": 4
+      }
+    },
+    {
+      "files": [
+        "*.md"
+      ],
+      "options": {
+        "parser": "markdown",
+        "printWidth": 120,
+        "tabWidth": 4
+      }
+    },
+    {
+      "files": [
+        "*.html"
+      ],
+      "options": {
+        "parser": "html",
+        "printWidth": 120,
+        "tabWidth": 4
+      }
+    },
+    {
+      "files": [
+        "*.css"
+      ],
+      "options": {
+        "parser": "css",
+        "printWidth": 120,
+        "tabWidth": 4
+      }
+    },
+    {
+      "files": [
+        "*.yml",
+        "*.yaml"
+      ],
+      "options": {
+        "parser": "yaml",
+        "printWidth": 120,
+        "tabWidth": 4
+      }
+    },
+    {
+      "files": "*.conf",
+      "options": {
+        "parser": "nginx",
+        "plugins": ["./node_modules/prettier-plugin-nginx/dist/index.js"]
+      }
+    }
+  ]
+}
