--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
     "numeral": "^2.0.6",
+    "prettier-plugin-nginx": "^1.0.3",
     "prop-types": "^15.8.1",
     "punycode": "^2.3.1",
     "react": "^18.2.0",
