--- a/.github/workflows/check-format.yml
+++ b/.github/workflows/check-format.yml
@@ -21,14 +21,5 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Run Prettier
-      run: npx prettier --write .
-
-    - name: Check for diffs
-      run: |
-        git diff
-        if [[ `git status --porcelain` ]]; then
-          echo "Code style issues found."
-          exit 1
-        else
-          echo "No code style issues found."
+    - name: Check for formatting errors
+      run: npx prettier --check .
