--- a/package.json
+++ b/package.json
@@ -16,14 +16,27 @@
         "re-build": "rm -rf build node_modules && yarn install && yarn build"
     },
     "eslintConfig": {
-        "extends": ["react-app", "react-app/jest"]
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
     },
     "babel": {
-        "presets": ["@babel/preset-react"]
+        "presets": [
+            "@babel/preset-react"
+        ]
     },
     "browserslist": {
-        "production": [">0.2%", "not dead", "not op_mini all"],
-        "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     },
     "dependencies": {
         "@emotion/react": "^11.11.1",
@@ -59,6 +72,7 @@
         "punycode": "^2.3.1",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.1",
+        "react-cookie": "^6.1.1",
         "react-copy-to-clipboard": "^5.1.0",
         "react-dom": "^18.2.0",
         "react-helmet-async": "^2.0.3",
