--- a/.github/workflows/kthcloud-ci-beta.yml
+++ b/.github/workflows/kthcloud-ci-beta.yml
@@ -5,7 +5,7 @@ on:
       - "beta"
   workflow_dispatch:
 jobs:
-  docker:
+  kthcloud-ci-beta:
     runs-on: ubuntu-latest
     steps:
       - name: Set release env
