Rebrand to console

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@kthcloud/landing-frontend",
+    "name": "@kthcloud/console",
     "author": "cloud.cbh.kth.se",
     "licence": "MIT",
     "version": "1.5.0",
