--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL="https://api.cloud.cbh.kth.se"
-REACT_APP_DEPLOY_API_URL="https://api.cloud.cbh.kth.se/deploy/v1"
+VITE_API_URL="https://api.cloud.cbh.kth.se"
+VITE_DEPLOY_API_URL="https://api.cloud.cbh.kth.se/deploy/v1"
 GENERATE_SOURCEMAP=false 
