--- a/package.json
+++ b/package.json
@@ -4,31 +4,32 @@
   "licence": "MIT",
   "version": "2.0.0",
   "private": false,
+  "type": "module",
   "scripts": {
     "dev": "vite --port 3000",
     "build": "vite build"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@iconify/react": "^4.1.1",
-    "@mui/icons-material": "^5.14.19",
-    "@mui/lab": "^5.0.0-alpha.155",
-    "@mui/material": "^5.14.20",
-    "@mui/material-next": "^6.0.0-alpha.113",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/lab": "^5.0.0-alpha.162",
+    "@mui/material": "^5.15.6",
+    "@mui/material-next": "^6.0.0-alpha.119",
     "@mui/x-tree-view": "^6.17.0",
     "@react-keycloak/web": "^3.4.0",
-    "@react-three/fiber": "^8.15.12",
+    "@react-three/fiber": "^8.15.15",
     "@sanity/eventsource": "^5.0.1",
-    "@types/three": "^0.159.0",
-    "apexcharts": "^3.44.2",
-    "change-case": "^5.3.0",
+    "@types/three": "^0.160.0",
+    "apexcharts": "^3.45.2",
+    "change-case": "^5.4.2",
     "crypto-js": "^4.2.0",
     "http-status-codes": "^2.3.0",
-    "i18next": "^23.7.8",
+    "i18next": "^23.7.19",
     "i18next-browser-languagedetector": "^7.2.0",
-    "js-base64": "^3.7.5",
-    "keycloak-js": "^23.0.1",
+    "js-base64": "^3.7.6",
+    "keycloak-js": "^23.0.4",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
     "numeral": "^2.0.6",
@@ -36,22 +37,22 @@
     "punycode": "^2.3.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
-    "react-cookie": "^6.1.1",
+    "react-cookie": "^7.0.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
-    "react-helmet-async": "^2.0.3",
-    "react-i18next": "^13.5.0",
-    "react-router-dom": "^6.20.1",
+    "react-helmet-async": "^2.0.4",
+    "react-i18next": "^14.0.1",
+    "react-router-dom": "^6.21.3",
     "simplebar": "^6.2.5",
     "simplebar-react": "^3.2.4",
-    "three": "^0.159.0",
+    "three": "^0.160.1",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
-    "@vitejs/plugin-react": "^4.0.0",
-    "prettier": "^3.1.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "prettier": "^3.2.4",
     "prettier-plugin-nginx": "^1.0.3",
-    "vite": "^4.3.9"
+    "vite": "^5.0.12"
   }
 }
