--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "js-base64": "^3.7.6",
     "keycloak-js": "^23.0.4",
     "lodash": "^4.17.21",
+    "million": "latest",
     "notistack": "^3.0.1",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
