--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,6 @@
         "module": "commonjs",
         "baseUrl": "."
     },
-    "include": ["src/**/*", "index.jsx"],
+    "include": ["src"],
     "exclude": ["node_modules"]
 }
