--- a/package.json
+++ b/package.json
@@ -51,9 +51,18 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.23",
     "@vitejs/plugin-react": "^4.2.1",
     "prettier": "^3.2.4",
     "prettier-plugin-nginx": "^1.0.3",
-    "vite": "^5.0.12"
+    "typescript": "^5.4.3",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "vite": "^5.2.0"
   }
 }
