--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@react-keycloak/web": "^3.4.0",
     "@react-three/fiber": "^8.15.15",
     "@sanity/eventsource": "^5.0.1",
-    "@types/three": "^0.160.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/three": "^0.163.0",
     "apexcharts": "^3.45.2",
     "change-case": "^5.4.2",
     "crypto-js": "^4.2.0",
@@ -47,22 +48,25 @@
     "simplebar": "^6.2.5",
     "simplebar-react": "^3.2.4",
     "three": "^0.160.1",
+    "three-stdlib": "^2.29.6",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
     "@types/react": "^18.2.73",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.2.23",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "prettier": "^3.2.4",
     "prettier-plugin-nginx": "^1.0.3",
     "typescript": "^5.4.3",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
     "vite": "^5.2.0"
   }
 }
