--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "js-base64": "^3.7.6",
     "keycloak-js": "^23.0.4",
+    "kthcloud-types": "^1.0.0",
     "lodash": "^4.17.21",
     "million": "latest",
     "notistack": "^3.0.1",
