Cleanup and fix more types

--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@iconify/react": "^4.1.1",
     "@mui/icons-material": "^5.15.6",
     "@mui/lab": "^5.0.0-alpha.162",
-    "@mui/material": "^5.15.6",
+    "@mui/material": "^5.15.15",
     "@mui/material-next": "^6.0.0-alpha.120",
-    "@mui/x-tree-view": "^6.17.0",
+    "@mui/x-tree-view": "^7.1.1",
     "@react-keycloak/web": "^3.4.0",
     "@react-three/fiber": "^8.15.15",
     "@sanity/eventsource": "^5.0.1",
     "@types/crypto-js": "^4.2.2",
+    "@types/numeral": "^2.0.5",
     "@types/three": "^0.163.0",
     "apexcharts": "^3.45.2",
     "change-case": "^5.4.2",
@@ -30,13 +31,12 @@
     "i18next": "^23.7.19",
     "i18next-browser-languagedetector": "^7.2.0",
     "js-base64": "^3.7.6",
-    "keycloak-js": "^23.0.4",
+    "keycloak-js": "^24.0.2",
     "kthcloud-types": "^1.0.0",
     "lodash": "^4.17.21",
     "million": "latest",
     "notistack": "^3.0.1",
     "numeral": "^2.0.6",
-    "prop-types": "^15.8.1",
     "punycode": "^2.3.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -48,7 +48,7 @@
     "react-router-dom": "^6.21.3",
     "simplebar": "^6.2.5",
     "simplebar-react": "^3.2.4",
-    "three": "^0.160.1",
+    "three": "^0.163.0",
     "three-stdlib": "^2.29.6",
     "yaml": "^2.3.4"
   },
