--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     ],
     "rules": {
         "@typescript-eslint/no-explicit-any": "off",
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "@typescript-eslint/ban-ts-comment": "off"
     }
 }
