--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_API_URL="https://api.cloud.cbh.kth.se"
 VITE_DEPLOY_API_URL="https://api.cloud.cbh.kth.se/deploy/v1"
+VITE_DEPLOY_V2_API_URL="https://api.cloud.cbh.kth.se/deploy/v2"
 GENERATE_SOURCEMAP=false 
