--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "vite --port 3000",
     "build": "vite build",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "format-check": "prettier --check ."
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -69,7 +70,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "prettier": "^3.2.4",
     "prettier-plugin-nginx": "^1.0.3",
-    "typescript": "^5.4.3",
+    "typescript": "^5.4.5",
     "vite": "^5.2.0"
   }
 }
