--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "apexcharts": "^3.45.2",
     "change-case": "^5.4.2",
     "crypto-js": "^4.2.0",
+    "go-deploy-types": "^1.0.6",
     "http-status-codes": "^2.3.0",
     "i18next": "^23.7.19",
     "i18next-browser-languagedetector": "^7.2.0",
     "js-base64": "^3.7.6",
     "keycloak-js": "^24.0.2",
-    "kthcloud-types": "^1.0.0",
     "lodash": "^4.17.21",
     "million": "latest",
     "notistack": "^3.0.1",
