Switch to new @kthcloud/go-deploy-types package

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@iconify/react": "^4.1.1",
+    "@kthcloud/go-deploy-types": "^1.0.3",
     "@mui/icons-material": "^5.15.6",
     "@mui/lab": "^5.0.0-alpha.162",
     "@mui/material": "^5.15.15",
@@ -30,7 +31,6 @@
     "apexcharts": "^3.45.2",
     "change-case": "^5.4.2",
     "crypto-js": "^4.2.0",
-    "go-deploy-types": "^1.0.6",
     "http-status-codes": "^2.3.0",
     "i18next": "^23.7.19",
     "i18next-browser-languagedetector": "^7.2.0",
