--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@iconify/react": "^4.1.1",
     "@kthcloud/go-deploy-types": "^1.0.3",
+    "@kthcloud/sys-api-types": "^1.0.2",
     "@mui/icons-material": "^5.15.6",
     "@mui/lab": "^5.0.0-alpha.162",
     "@mui/material": "^5.15.15",
