Support VM v2, Add alert provider, CI/CD TSC check, Beta channel switcher (#241)
* Bump dependencies

* Convert to Typescript, minor fixes (#216)

* Begin rewrite to TS

* Batch rename

* Add some more types

* Install kthcloud-types package

* Cleanup and fix more types

* Format

* Add formatting script and update dependencies

* Convert prop-types to ts

* Fix format

* Fix comma after TB of memory, fix #212

* Fix formatting

* Fix import paths, #211

* More types #211

* Fix more types #211

* Fix some types #211 and a bug in the swedish locale for RFC1035Input

* Add some more types #211

* Fix formatting

* Fix some more types #211

* More types #211

* Convert more types #211

* Fix more types #211

* Fix more types #211

* Fix more types #211

* Fix more types #211

* Clear on reconnect option in deploy logs, fixes #214

* Fix formatting

* Fetch tier info from API, closes #213, add more types for #211

* Finalize #211

* Bump dependencies

* Show both zone description and name

* Bump dependencies

* Fix prefer-const

* Unfinished VM v2 (#224)

* Begin work for vmv2

* More VM v2 work

* Add vmv2 beta warning

* Add TSC to code format check GitHub action  #218

* rename tsc action, closes #218

* Add more VM v2 features (#238)

* Begin GPU manager #225

* Fix formatting

* Update DangerZone Transfer ownership to VM v2 #228

* Proxy manager use VM v2 api #226

* Bump dependencies

* Move to CI/CD npm package, bump dependencies

* Cleanup GPU #225

* Fix formatting

* Fix warnings

* Fix VM v2 command API renamed to action, closes #237

* Show GPU in deploy page

* Cleanup GpuManager #255

* Fix missing space in profile

* Disable proxy manager

* CI passing, Add alert service, Cleanup (#239)

* Begin GPU manager #225

* Fix formatting

* Update DangerZone Transfer ownership to VM v2 #228

* Proxy manager use VM v2 api #226

* Bump dependen

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 VITE_API_URL="https://api.cloud.cbh.kth.se"
 VITE_DEPLOY_API_URL="https://api.cloud.cbh.kth.se/deploy/v1"
+VITE_DEPLOY_V2_API_URL="https://api.cloud.cbh.kth.se/deploy/v2"
+VITE_ALERT_API_URL="https://alert.app.cloud.cbh.kth.se/"
 GENERATE_SOURCEMAP=false 
