--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "scripts": {
     "dev": "vite --port 3000",
     "build": "vite build",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "format-check": "prettier --check ."
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@iconify/react": "^4.1.1",
+    "@kthcloud/go-deploy-types": "^1.0.3",
     "@mui/icons-material": "^5.15.6",
     "@mui/lab": "^5.0.0-alpha.162",
     "@mui/material": "^5.15.15",
@@ -34,7 +36,6 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "js-base64": "^3.7.6",
     "keycloak-js": "^24.0.2",
-    "kthcloud-types": "^1.0.0",
     "lodash": "^4.17.21",
     "million": "latest",
     "notistack": "^3.0.1",
@@ -69,7 +70,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "prettier": "^3.2.4",
     "prettier-plugin-nginx": "^1.0.3",
-    "typescript": "^5.4.3",
+    "typescript": "^5.4.5",
     "vite": "^5.2.0"
   }
 }
