--- a/.github/workflows/kthcloud-ci.yml
+++ b/.github/workflows/kthcloud-ci.yml
@@ -2,7 +2,7 @@ name: Build and deploy to cloud.cbh.kth.se
 on:
   push:
     branches:
-      - "main"
+      - "release"
   workflow_dispatch:
 jobs:
   kthcloud-ci:
