Make docker image configurable with envs

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 VITE_DEPLOY_API_URL="https://api.cloud.cbh.kth.se/deploy/v2"
 VITE_ALERT_API_URL="https://alert.app.cloud.cbh.kth.se/"
+VITE_KEYCLOAK_URL="https://iam.cloud.cbh.kth.se"
+VITE_KEYCLOAK_REALM="cloud"
+VITE_KEYCLOAK_CLIENT_ID="landing"
+VITE_RANCHER_URL="https://mgmt.cloud.cbh.kth.se"
+VITE_DNS_URL="https://dns.cloud.cbh.kth.se"
+VITE_MAIA_URL="https://maia.app.cloud.cbh.kth.se/maia"
 GENERATE_SOURCEMAP=false 
