use buildx with specified target platform to crosscompile if user is running other architecture than amd64

--- a/.env
+++ b/.env
@@ -6,4 +6,6 @@ VITE_KEYCLOAK_CLIENT_ID="landing"
 VITE_RANCHER_URL="https://mgmt.cloud.cbh.kth.se"
 VITE_DNS_URL="https://dns.cloud.cbh.kth.se"
 VITE_MAIA_URL="https://maia.app.cloud.cbh.kth.se/maia"
+# can be comma separated to add more
+VITE_SERVER_PLATFORM="linux/amd64"
 GENERATE_SOURCEMAP=false 
